2011-03-16  Per Bothner  <per@bothner.com>

	* Expression.java (makeWhile): Rewrite to make use of the Compilation
	loopStart..loopRepeat methods.
	* Compilation.java (loopStart): Initialize exprStack here
	rather than in loopVariable.

	* FindCapturedVars.java (visitFluidLetExp): Don't warnUndefinedVariable
	if IS_DYNAMIC flag is set.

	* SetExp.java (checkReachable): More informative warning text.

2011-03-07  Per Bothner  <per@bothner.com>

	* SetExp.java (checkReachable): New method.
	(compile): Use it.
	* StackTarget.java (compileFromStack0): Do nothing if not
	reachableHere.
	Fixes Savannah bug#32678 "set! and endless loop".

2011-03-04  Per Bothner  <per@bothner.com>

	* InlineCalls.java (maybeInline): Don't used obsolete
	Methodhandle.invokeExact syntax.

2011-02-20  Per Bothner  <per@bothner.com>

	* InlineCalls.java (visitSetExp): Inline super.visitSetExp and
	visitSetExpValue.
	(visitSetExpValue): Remove no-longer-needed method.
	* ExpVisitor.java (visitSetExp): Inline visitSetExpValue.
	(visitSetExpValue): Remove no-longer-needed method.

2011-01-27  Per Bothner  <per@bothner.com>

	* Declaration.java: Re-write handling of the 'value' Expression.
	There is now an array of ValueSource objects, so there can be multiple
	possible setters remembered, with some useful indirection.
	Preliminary work for supporting Single-Static-Assignment analysis.
	(value): Removed field.
	(nvalues, values): New fields.
	(getValue, NoteValue, setValue): Re-written.
	(class ValueSource): New static member class.
	(getValueraw, noteValueConstant, noteValueUnknown,
	noteValueFromSet, noteValueFromLet, checkNameDecl): New methods.
	* ApplyExp.java: Update to use new methods.
	* ModuleInfo.java: Likewise.
	* ModuleExp.java: Likewise.
	* FindCapturedVars.java: Likewise.
	* ReferenceExp.java: Likewise.
	* SetExp.java (setNewValue): New method.
	* ExpVisitor.java (visitSetExp): Simplify - don't need to update
	declaration's value because new indirection does it automatically.