@@ -1,5 +1,8 @@
 2011-03-16  Per Bothner  <per@bothner.com>
 
+	* Compilation.java (letVariable(Declaratiom,Expression)):
+	New method overload.
+
 	* Expression.java (makeWhile): Rewrite to make use of the Compilation
 	loopStart..loopRepeat methods.
 	* Compilation.java (loopStart): Initialize exprStack here
